# HelmInspect

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yaml  pypi-publish.yaml  sync-fork.yaml
helm_inspect/: cli.py  core.py  main.py  utils.py
helm_inspect/integrations/: slack.py
helm_inspect/utils/: calibration.py  cli.py  cluster.py  constant.py  drift_check.py  logger.py
landing/: index.html  package-lock.json  package.json
landing/src/: app.tsx  main.tsx
landing/src/assets/styles/: index.css
landing/src/components/: index.styles.ts
landing/src/components/commandbox/: commandbox.styles.ts  commandbox.tsx
landing/src/components/ctabox/: ctabox.styles.ts  ctabox.tsx
landing/src/components/layout/: layout.styles.ts  layout.tsx
landing/src/components/navbar/: navbar.styles.ts  navbar.tsx
landing/src/components/scenariobox/: scenariobox.tsx
landing/src/containers/how/: how.styles.ts  how.tsx
landing/src/containers/landing/: landing.styles.ts  landing.tsx
landing/src/containers/why/: why.styles.ts  why.tsx
